--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://0RaMsY0.github.io/Calculator-react",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,8 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,6 +41,7 @@
   "devDependencies": {
     "@svgr/plugin-svgo": "^6.1.2",
     "css-select": "^4.2.1",
+    "gh-pages": "^3.2.3",
     "nth-check": "^2.0.1"
   }
 }
