--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://0RaMsY0.github.io/Calculator-react",
+  "homepage": "https://0ramsy0.github.io/Calculator-react/",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
